# napari-synapses-counter

./: LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
docs/: index.md
src/napari_synapses_counter/: __init__.py  _widget.py  napari.yaml  napari_yaml.bak  output.txt
src/napari_synapses_counter/Backup/: Reste.py  _widget_2023-01-26.py  leavings.py  runCleanUp.py  synapses V0.1 2022-08-26.py  synapses V0.2 2022-11-08.py
src/napari_synapses_counter/_tests/: test_dock_widget.py
