[metadata]
name = napari-synapses-counter
version = 0.0.1
author = Peter Lampen
author_email = lampen@isas.de
url = https://github.com/MMV-Lab/napari-synapses-counter
license = BSD-3-Clause
description = This plugin is used to count synapses.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/MMV-Lab/napari-synapses-counter/issues
    Documentation = https://github.com/MMV-Lab/napari-synapses-counter#README.md
    Source Code = https://github.com/MMV-Lab/napari-synapses-counter
    User Support = https://github.com/MMV-Lab/napari-synapses-counter/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-synapses-counter = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-synapses-counter = napari_synapses_counter:napari.yaml
